--- a/templates/login.html
+++ b/templates/login.html
@@ -1,6 +1,22 @@
 {% extends "template.html" %}
 {% block content %}
-  <h2>Welcome to the Flaks Blog!</h2>
+<div class="login-wrapper">
+  <h2>Welcome to the Flask Blog!</h2>
   <h3>Please log in to access your blog.</h3>
-  <p>Temp Log in: <a href="/main">Log in</a></p>
+  <form action="" method="post">
+	 <div>
+		 <label for="name">Username:</label>
+		 <input type="text" id="username" name="username" value="{{
+		 request.form.username }}">
+	</div>
+	 <div>
+		 <label for="mail">Password:</label>
+		 <input type="password" id="password" name="password" value="{{
+		 request.form.password }}">
+	</div>
+	<div>
+		<button type="submit">Log In</button>
+	</div>
+  </form>
+</div>
 {% endblock %}
